### Fix 015 Cleaning up source, adding logs